removing white gaps from Section and Tiles when inside Layer in IE11, and updating IE11 fix comment in Layer styles

--- a/src/scss/grommet-core/_objects.tile.scss
+++ b/src/scss/grommet-core/_objects.tile.scss
@@ -13,6 +13,13 @@
 
   @include pad();
 
+  // IE11 fix to remove white gap when Tiles component is inside Layer
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .layer & {
+      height: 100%;
+    }
+  }
+
   &__container {
     display: flex;
     flex-direction: row;
